// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSwitch should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  disabled={false}
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(230, 228, 235)"
  style={undefined}
  theme={Object {}}
  thumbTintColor="rgb(243, 242, 245)"
  tintColor="rgb(230, 228, 235)"
  trackTintColor="rgb(230, 228, 235)"
  value={false}
/>
`;

exports[`Android BpkSwitch should render correctly 1`] = `
<AndroidSwitch
  disabled={false}
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(230, 228, 235)"
  style={undefined}
  theme={null}
  thumbTintColor="rgb(243, 242, 245)"
  tintColor="rgb(230, 228, 235)"
  trackTintColor="rgb(230, 228, 235)"
  value={false}
/>
`;

exports[`Android BpkSwitch should support the "value" prop 1`] = `
<AndroidSwitch
  disabled={false}
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(230, 228, 235)"
  style={undefined}
  theme={null}
  thumbTintColor="rgb(0, 178, 214)"
  tintColor="rgb(230, 228, 235)"
  trackTintColor="rgb(230, 228, 235)"
  value={true}
/>
`;

exports[`Android BpkSwitch should support theming 1`] = `
<AndroidSwitch
  disabled={false}
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(230, 228, 235)"
  style={undefined}
  theme={
    Object {
      "switchPrimaryColor": "red",
    }
  }
  thumbTintColor="rgb(243, 242, 245)"
  tintColor="rgb(230, 228, 235)"
  trackTintColor="rgb(230, 228, 235)"
  value={false}
/>
`;
